--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.17.1",
+    "debounce": "^1.1.0",
     "element-ui": "^2.0.10",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-notification": "^1.3.4",
+    "vue-router": "^3.0.1",
+    "vue2-google-maps": "^0.8.4",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
