--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "npm run dev",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run e2e",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "deploy": "gsutil cp -r -z css,js -a public-read dist/** gs://house.sabikaorganizer.com"
   },
   "dependencies": {
     "axios": "^0.17.1",
